--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   arcade:
     image: harshitbhatt043/arcade:latest
+    user: "1001:1001"
     container_name: arcade
     ports:
       - 127.0.0.1:5000:80
