--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -17,11 +17,11 @@ scrape_configs:
 
   - job_name: 'jenkins'
     metrics_path: '/prometheus/'
-    scheme: https
+    scheme: http
     tls_config:
       insecure_skip_verify: true
     static_configs:
-        - targets: ['jenkins.pearl9.xyz:443']
+        - targets: ['192.168.0.12:8080']
     metric_relabel_configs:
     - action: replace
       source_labels: [exported_job]
