--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=HarshitBhatt043_Jenkins-Project-Web-Arcade
 sonar.organization=harshitbhatt043
-#sonar.sources=./maker
+sonar.sources=.
 sonar.exclusions=**/docker/**,**/cloud/**
