--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=HarshitBhatt043_Jenkins-Project-Web-Arcade
 sonar.organization=harshitbhatt043
 sonar.sources=./maker
 #sonar.exclusions=**/docker/**,**/cloud/**
+sonar.inclusions=./Dockerfile,./Jenkinsfile,./docker-compose.yml
