--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=HarshitBhatt043_Jenkins-Project-Web-Arcade
 sonar.organization=harshitbhatt043
-sonar.sources=./maker
-sonar.exclusions=./maker/games.php
-sonar.inclusions=./Dockerfile,./Jenkinsfile,./docker-compose.yml
+sonar.sources=maker
+sonar.exclusions=maker/games.php
+sonar.inclusions=Dockerfile,Jenkinsfile,docker-compose.yml
